--- a/assets/index.html
+++ b/assets/index.html
@@ -9,6 +9,7 @@
     <title>Thomas Albuquerque</title>
 </head>
 <body>
+    <!-- NAV INÍCIO -->
     <nav>
         <div class="logo"><img src="/img/logo_ta_gray.png" alt=""></div>
 
@@ -25,5 +26,34 @@
         </ul>
     </nav>
     <script src="main.js"></script>
+    <!-- NAV FIM -->
+
+    <!-- FOOTER INÍCIO -->
+    <footer>
+        <div class="footer-content">
+            <h3>&lt;TA&gt;.DEV</h3>
+            <p>	&lt;TA&gt;.DEV é um Blog pessoal em formato de portifólio, desenvolvido em HTML5|CSS3|JavaScript; Aqui você pode ter acesso à meu curriculo e meus contatos, além de meus projetos e um pouco do meu dia a dia. </p>
+            <ul class="socials">
+                <li><a href="https://www.facebook.com/thomas.albuquerque.54/"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/ThomyVodka"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://github.com/FoxShino"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/thomas-albuquerque-ba697456/"><i class="fa fa-linkedin-square"></i></a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>copyright &copy; <a href="#">Thomas Albuquerque</a>  </p>
+                    <div class="footer-menu">
+                      <ul class="f-menu">
+                        <li><a href="">Início</a></li>
+                        <li><a href="">Sobre</a></li>
+                        <li><a href="">Projetos</a></li>
+                        <li><a href="">Bastidores</a></li>
+                        <li><a href="">Contato</a></li>
+                      </ul>
+                    </div>
+        </div>
+
+    </footer>
+    <!-- FOOTER FIM -->
 </body>
 </html>
